--- a/assets/styles.css
+++ b/assets/styles.css
@@ -27,7 +27,20 @@ p{
 box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
 }
 
-.form_submit{    padding: 10px 30px;
+.form_submite{    padding: 10px 30px;
+    margin: 20px;
+    border-radius: 3em;
+    border: none;
+    background-color: #ff9324;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Raleway', sans-serif !important;
+    outline: none;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.form_submita{    padding: 10px 30px;
     margin: 20px;
     border-radius: 3em;
     border: none;
@@ -347,7 +360,9 @@ margin-bottom: -80px;*/
     margin: 0 auto;
     margin-bottom: -130px;opacity: 0; transition: 0.5s all;}
 
-#form_main.active{ margin-bottom: 30px;
+#form_main.active{ 
+    
+    margin-bottom: 30px;
     padding: 20px;
     padding-top: 50px;
     padding-bottom: 10px;
@@ -360,6 +375,36 @@ margin-bottom: -80px;*/
     -webkit-box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
 box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75); width: 100%; transition: 0.5s all; opacity: 100; }
+
+
+#editar{
+    display: none;
+    transition: 0.3s all;
+}
+
+#editar.active{
+    display: block;
+    margin: 0 auto;
+    /* margin: 20px; */
+    margin-top: 25px;
+    text-align: center;
+    justify-content: center;
+    transition: 0.3s all;
+}
+
+#agregar{display: none;   transition: 0.3s all;}
+
+
+#agregar.active{
+    display: block;
+    margin: 0 auto;
+    /* margin: 20px; */
+    margin-top: 25px;
+    text-align: center;
+    justify-content: center;
+    transition: 0.3s all;
+}
+
 
 .btn {
     padding: 10px 20px;
