--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,9 +8,8 @@ html{
     
 }
 
-p{
-    color: white;
-}
+p{color: white;}
+
 
 #form_main{margin-bottom: 30px;
     padding: 20px;
@@ -27,7 +26,9 @@ p{
 box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
 }
 
-.form_submite{    padding: 10px 30px;
+.form_submite{    
+    
+    padding: 10px 30px;
     margin: 20px;
     border-radius: 3em;
     border: none;
@@ -40,7 +41,10 @@ box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
     font-weight: bold;
 }
 
-.form_submita{    padding: 10px 30px;
+.form_submita{  
+   
+    
+    padding: 10px 30px;
     margin: 20px;
     border-radius: 3em;
     border: none;
@@ -369,13 +373,50 @@ margin-bottom: -80px;*/
     background-color: black;
     transition: 0.3s;
     text-align: center;
-
+    transition: 0.5s all;
     border-radius: 20px;
 
     -webkit-box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
 box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75); width: 100%; transition: 0.5s all; opacity: 100; }
 
+.bo {
+    padding: 5px 20px;
+    border-radius: 3em;
+    border: 0px;
+    margin: 5px;
+    background-color: #f3ab28;
+    margin-top: 6%;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;
+}
+
+#borrar{
+    transition: 0.3s all;
+    padding: 0px;
+    margin: 0 auto;
+    margin-bottom: -130px;opacity: 0; transition: 0.5s all;
+    
+}
+
+#borrar.active{
+    text-align: center;
+        background-color: black;
+        width: 30%;
+        margin: 0 auto;
+        padding: 30px;
+        border-radius: 20px;
+        position: fixed;
+        top: 40%;
+        left: 35%;
+        opacity: 100;
+        
+    -webkit-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+    box-shadow: 0px 0px 11px 0px rgba(209,147,23)
+}
 
 #editar{
     display: none;
@@ -385,7 +426,6 @@ box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75); width: 100%; transition: 0.5s all
 #editar.active{
     display: block;
     margin: 0 auto;
-    /* margin: 20px; */
     margin-top: 25px;
     text-align: center;
     justify-content: center;
@@ -394,18 +434,54 @@ box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75); width: 100%; transition: 0.5s all
 
 #agregar{display: none;   transition: 0.3s all;}
 
-
-#agregar.active{
+#agregar.active {
     display: block;
     margin: 0 auto;
-    /* margin: 20px; */
-    margin-top: 25px;
     text-align: center;
+    margin-bottom: 2%;
     justify-content: center;
     transition: 0.3s all;
 }
 
+#aviso{
+    background-color: black;
+    transition: 0.3s all;
+    width: 30%;
+    padding: 45px;
+    opacity: 100;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 20px;
+    left: 35%;
+    top: 40%;
+    position: fixed;
+    border-radius: 30px;
+    -webkit-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+    box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+    opacity: 0;
+}
 
+  
+#aviso.active{
+    
+    background-color: black;
+    transition: 0.5s all;
+    width: 30%;
+    padding: 45px;
+    opacity: 100;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 20px;
+    left: 35%;
+    top: 40%;
+    position: fixed;
+    border-radius: 30px;
+    -webkit-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+    box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+
+}
 .btn {
     padding: 10px 20px;
     z-index: 100;
