--- a/assets/styles.css
+++ b/assets/styles.css
@@ -589,3 +589,46 @@ a:hover{
     -webkit-animation-name: slideInDown;
     animation-name: slideInDown;
   }
+
+  @media only screen and (max-width: 600px) {
+    
+    #aviso.active {
+        background-color: black;
+        transition: 0.3s all;
+        width: 70%;
+        padding: 45px;
+        opacity: 100;
+        text-align: center;
+        margin: 0 auto;
+        font-size: 20px;
+        left: 15%;
+        top: 40%;
+        position: fixed;
+        border-radius: 30px;
+        -webkit-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+        -moz-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+        box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+        /* opacity: 0; */
+        z-index: 99;
+        /* display: none; */
+    }
+
+    #borrar.active{
+        text-align: center;
+        background-color: black;
+        width: 60%;
+        margin: 0 auto;
+        padding: 30px;
+        border-radius: 20px;
+        position: fixed;
+        top: 40%;
+        left: 20%;
+        opacity: 100;
+        display: block;
+        -webkit-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+        -moz-box-shadow: 0px 0px 11px 0px rgba(209,147,23,1);
+        box-shadow: 0px 0px 11px 0px rgba(209,147,23);
+    
+    }
+
+  }
